tests/e2e/manifest/target-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-deployment
  labels:
    app: target-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-deployment
  template:
    metadata:
      labels:
        app: target-deployment
    spec:
      containers:
      - name: target-deployment
        image: nginx:stable
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
