tests/e2e/manifest/target-virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: target-deployment
  namespace: istio-system
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: target-deployment.default.svc.cluster.local
        port:
          number: 80
