tests/e2e/manifest/values-istio-ingress.yaml
# Istio Gateway Helm values for version 1.27+
service:
  type: LoadBalancer
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443

labels:
  istio: ingressgateway
